[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI/StatusDisplay.gd" type="Script" id=1]

[node name="StatusDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_right = 210.0
margin_bottom = 50.0
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 68.0
margin_bottom = 14.0
text = "Yaw Rate:"

[node name="YawRateDisplay" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 72.0
margin_right = 72.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 18.0
margin_right = 68.0
margin_bottom = 32.0
text = "Pitch Rate:"

[node name="PitchRateDisplay" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 72.0
margin_top = 18.0
margin_right = 72.0
margin_bottom = 32.0

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 36.0
margin_right = 68.0
margin_bottom = 50.0
text = "Roll Rate:"

[node name="RollRateDisplay" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 72.0
margin_top = 36.0
margin_right = 72.0
margin_bottom = 50.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 210.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 210.0
margin_bottom = 76.0
text = "Target Distance/Relative Velocity"

[node name="GridContainer2" type="GridContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 210.0
margin_bottom = 130.0
columns = 3

[node name="Label" type="Label" parent="VBoxContainer/GridContainer2"]
margin_right = 12.0
margin_bottom = 14.0
text = "X:"

[node name="XDistanceDisplay" type="Label" parent="VBoxContainer/GridContainer2"]
margin_left = 16.0
margin_right = 16.0
margin_bottom = 14.0

[node name="RelativeXVelocityDisplay" type="Label" parent="VBoxContainer/GridContainer2"]
margin_left = 20.0
margin_right = 20.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer2"]
margin_top = 18.0
margin_right = 12.0
margin_bottom = 32.0
text = "Y:"

[node name="YDistanceDisplay" type="Label" parent="VBoxContainer/GridContainer2"]
margin_left = 16.0
margin_top = 18.0
margin_right = 16.0
margin_bottom = 32.0

[node name="RelativeYVelocityDisplay" type="Label" parent="VBoxContainer/GridContainer2"]
margin_left = 20.0
margin_top = 18.0
margin_right = 20.0
margin_bottom = 32.0

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer2"]
margin_top = 36.0
margin_right = 12.0
margin_bottom = 50.0
text = "Z:"

[node name="ZDistanceDisplay" type="Label" parent="VBoxContainer/GridContainer2"]
margin_left = 16.0
margin_top = 36.0
margin_right = 16.0
margin_bottom = 50.0

[node name="RelativeZVelocityDisplay" type="Label" parent="VBoxContainer/GridContainer2"]
margin_left = 20.0
margin_top = 36.0
margin_right = 20.0
margin_bottom = 50.0
